[tool.poetry]
name = "slackperson"
version = "0.5.1"
description = "Simple class to store slack profile information"
authors = ["Rick Henry <fredericmhenry@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.4"
attrs = "^18.2"
nameparser = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
